; ModuleID = '/home/carl/AnghaBench/tig/src/extr_tree.c_tree_get_column_data.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_tree.c_tree_get_column_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.view = type { i32 }
%struct.line = type { i64, %struct.tree_entry* }
%struct.tree_entry = type { i32, i32, i32, i32, i32, i32 }
%struct.view_column_data = type { i32, i32*, i32, i32*, i32*, i32 }

@LINE_HEADER = common dso_local global i64 0, align 8
@LINE_DIRECTORY = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.view*, %struct.line*, %struct.view_column_data*)* @tree_get_column_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tree_get_column_data(%struct.view* %0, %struct.line* %1, %struct.view_column_data* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.view*, align 8
  %6 = alloca %struct.line*, align 8
  %7 = alloca %struct.view_column_data*, align 8
  %8 = alloca %struct.tree_entry*, align 8
  store %struct.view* %0, %struct.view** %5, align 8
  store %struct.line* %1, %struct.line** %6, align 8
  store %struct.view_column_data* %2, %struct.view_column_data** %7, align 8
  %9 = load %struct.line*, %struct.line** %6, align 8
  %10 = getelementptr inbounds %struct.line, %struct.line* %9, i32 0, i32 1
  %11 = load %struct.tree_entry*, %struct.tree_entry** %10, align 8
  store %struct.tree_entry* %11, %struct.tree_entry** %8, align 8
  %12 = load %struct.line*, %struct.line** %6, align 8
  %13 = getelementptr inbounds %struct.line, %struct.line* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @LINE_HEADER, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %53

18:                                               ; preds = %3
  %19 = load %struct.tree_entry*, %struct.tree_entry** %8, align 8
  %20 = getelementptr inbounds %struct.tree_entry, %struct.tree_entry* %19, i32 0, i32 5
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.view_column_data*, %struct.view_column_data** %7, align 8
  %23 = getelementptr inbounds %struct.view_column_data, %struct.view_column_data* %22, i32 0, i32 5
  store i32 %21, i32* %23, align 8
  %24 = load %struct.tree_entry*, %struct.tree_entry** %8, align 8
  %25 = getelementptr inbounds %struct.tree_entry, %struct.tree_entry* %24, i32 0, i32 4
  %26 = load %struct.view_column_data*, %struct.view_column_data** %7, align 8
  %27 = getelementptr inbounds %struct.view_column_data, %struct.view_column_data* %26, i32 0, i32 4
  store i32* %25, i32** %27, align 8
  %28 = load %struct.line*, %struct.line** %6, align 8
  %29 = getelementptr inbounds %struct.line, %struct.line* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = load i64, i64* @LINE_DIRECTORY, align 8
  %32 = icmp ne i64 %30, %31
  br i1 %32, label %33, label %38

33:                                               ; preds = %18
  %34 = load %struct.tree_entry*, %struct.tree_entry** %8, align 8
  %35 = getelementptr inbounds %struct.tree_entry, %struct.tree_entry* %34, i32 0, i32 3
  %36 = load %struct.view_column_data*, %struct.view_column_data** %7, align 8
  %37 = getelementptr inbounds %struct.view_column_data, %struct.view_column_data* %36, i32 0, i32 3
  store i32* %35, i32** %37, align 8
  br label %38

38:                                               ; preds = %33, %18
  %39 = load %struct.tree_entry*, %struct.tree_entry** %8, align 8
  %40 = getelementptr inbounds %struct.tree_entry, %struct.tree_entry* %39, i32 0, i32 2
  %41 = load i32, i32* %40, align 4
  %42 = load %struct.view_column_data*, %struct.view_column_data** %7, align 8
  %43 = getelementptr inbounds %struct.view_column_data, %struct.view_column_data* %42, i32 0, i32 2
  store i32 %41, i32* %43, align 8
  %44 = load %struct.tree_entry*, %struct.tree_entry** %8, align 8
  %45 = getelementptr inbounds %struct.tree_entry, %struct.tree_entry* %44, i32 0, i32 1
  %46 = load %struct.view_column_data*, %struct.view_column_data** %7, align 8
  %47 = getelementptr inbounds %struct.view_column_data, %struct.view_column_data* %46, i32 0, i32 1
  store i32* %45, i32** %47, align 8
  %48 = load %struct.tree_entry*, %struct.tree_entry** %8, align 8
  %49 = getelementptr inbounds %struct.tree_entry, %struct.tree_entry* %48, i32 0, i32 0
  %50 = load i32, i32* %49, align 4
  %51 = load %struct.view_column_data*, %struct.view_column_data** %7, align 8
  %52 = getelementptr inbounds %struct.view_column_data, %struct.view_column_data* %51, i32 0, i32 0
  store i32 %50, i32* %52, align 8
  store i32 1, i32* %4, align 4
  br label %53

53:                                               ; preds = %38, %17
  %54 = load i32, i32* %4, align 4
  ret i32 %54
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
